--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -17,6 +17,9 @@
         <action
             android:id="@+id/action_feedFragment_to_viewPostFragment"
             app:destination="@id/postDetailsFragment" />
+        <action
+            android:id="@+id/action_feedFragment_to_imageViewFragment"
+            app:destination="@id/imageViewFragment" />
     </fragment>
     <fragment
         android:id="@+id/editPostFragment"
@@ -32,4 +35,8 @@
             android:id="@+id/action_viewPostFragment_to_editPostFragment"
             app:destination="@id/editPostFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/imageViewFragment"
+        android:name="ru.netology.nmedia.activity.ImageViewFragment"
+        android:label="ImageViewFragment" />
 </navigation>
